src/blocks/gallery/gallery.scss
.gallery {
	$self: &;

	&__row {
		display: grid;
		grid-template: repeat(5, 1fr) / repeat(5, 1fr);
		aspect-ratio: 2.8 / 1;
		grid-gap: 2px;
		margin-bottom: 2px;
		
		@include media('<=sm') {
			grid-template: repeat(9, 1fr) / repeat(2, 1fr);
			aspect-ratio: 1 / 1.6;
		}
		
		@include media('<=xxxs') {
			display: block;
			margin-bottom: 0;
		}

		#{$self}__image[data-animation] {
			opacity: 0;
	
			&.showed {
				animation: fadeInUp 0.7s;
				animation-fill-mode: forwards;
	
				@for $i from 1 through 8 {
					&:nth-child(#{$i}) {
						animation-delay: #{$i * 0.2}s;
					}
				}
			}
		}

		&:nth-child(odd) #{$self}__image {
		
			&:nth-child(1) {
				grid-column: span 1;
				grid-row: 1 / span 2;
				
				@include media('<=sm') {
					grid-column: span 1;
					grid-row: 1 / span 2;
				}
			}
			
			&:nth-child(2) {
				grid-column: span 2;
				grid-row: 1 / span 3;
				
				@include media('<=sm') {
					grid-column: span 1;
					grid-row: 1 / span 3;
				}
			}
			
			&:nth-child(3) {
				grid-column: span 1;
				grid-row: 1 / span 2;
				
				@include media('<=sm') {
					grid-column: span 1;
					grid-row: 3 / span 3;
				}
			}
			
			&:nth-child(4) {
				grid-column: span 1;
				grid-row: 1 / span 2;
				
				@include media('<=sm') {
					grid-column: span 1;
					grid-row: 4 / span 2;
				}
			}
			
			&:nth-child(5) {
				grid-column: span 1;
				grid-row: 3 / span 3;
				
				@include media('<=sm') {
					grid-column: span 1;
					grid-row: 6 / span 2;
				}
			}
			
			&:nth-child(6) {
				grid-column: span 1;
				grid-row: 4 / span 2;
				
				@include media('<=sm') {
					grid-column: span 1;
					grid-row: 6 / span 3;
				}
			}
			
			&:nth-child(7) {
				grid-column: span 1;
				grid-row: 4 / span 2;
				
				@include media('<=sm') {
					grid-column: span 1;
					grid-row: 8 / span 2;
				}
			}
			
			&:nth-child(8) {
				grid-column: span 2;
				grid-row: 3 / span 3;
				
				@include media('<=sm') {
					grid-column: span 1;
					grid-row: 9 / span 1;
				}
			}
		}

		&:nth-child(even) #{$self}__image {
		
			&:nth-child(1) {
				grid-column: span 1;
				grid-row: 1 / span 2;
				
				@include media('<=sm') {
					grid-column: span 1;
					grid-row: 1 / span 3;
				}
			}
			
			&:nth-child(2) {
				grid-column: span 1;
				grid-row: 1 / span 2;
				
				@include media('<=sm') {
					grid-column: span 1;
					grid-row: 1 / span 2;
				}
			}
			
			&:nth-child(3) {
				grid-column: span 2;
				grid-row: 1 / span 3;
				
				@include media('<=sm') {
					grid-column: span 1;
					grid-row: 4 / span 2;
				}
			}
			
			&:nth-child(4) {
				grid-column: span 1;
				grid-row: 1 / span 2;
				
				@include media('<=sm') {
					grid-column: span 1;
					grid-row: 3 / span 2;
				}
			}
			
			&:nth-child(5) {
				grid-column: span 2;
				grid-row: 3 / span 3;
				
				@include media('<=sm') {
					grid-column: span 1;
					grid-row: 6 / span 1;
				}
			}
			
			&:nth-child(6) {
				grid-column: span 1;
				grid-row: 4 / span 2;
				
				@include media('<=sm') {
					grid-column: span 1;
					grid-row: 5 / span 3;
				}
			}
			
			&:nth-child(7) {
				grid-column: span 1;
				grid-row: 4 / span 2;
				
				@include media('<=sm') {
					grid-column: span 1;
					grid-row: 7 / span 3;
				}
			}
			
			&:nth-child(8) {
				grid-column: span 1;
				grid-row: 3 / span 3;
				
				@include media('<=sm') {
					grid-column: span 1;
					grid-row: 8 / span 2;
				}
			}
		}
	}

	&__image {
		grid-column: span 1;
		overflow: hidden;
		transform: translateZ(0);
		backface-visibility: hidden;

		@include media('<=xxxs') {
			display: block;
			margin-bottom: 2px;
		}

		&[data-modal] {
			cursor: pointer;
		}

		&:hover img {
			transform: scale(1.1);
		}
		
		img {
			display: block;
			width: 100%;
			height: 100%;
			object-fit: cover;
			object-position: center;
			transition: transform 0.4s;
		}
	}
}

